# openclaw-skill-mailhub

./: .env.example  .gitignore  LICENSE  PROVIDERS.md  README.md  SECURITY.md  SKILL.md  pyproject.toml  setup
config/: bill_detection.yml  rules.email_tags.yml  rules.reply_needed.yml
config/prompts/: bill_extract.md  classify_email.md  draft_reply.md  summarize_bucket.md
scripts/: doctor.sh
src/mailhub/: accounts.py  agent_bridge.py  bind.py  cli.py  cli_wizard.py  config.py  jobs.py  security.py  store.py
src/mailhub/app/: __init__.py  bind.py  cli.py  wizard.py
src/mailhub/connectors/: __init__.py
src/mailhub/connectors/providers/: __init__.py  caldav.py  carddav.py  google_gmail.py  imap_smtp.py  ms_graph.py
src/mailhub/core/: __init__.py  accounts.py  agent_bridge.py  config.py  dbkey_backend.py  jobs.py  logging.py  security.py  store.py
src/mailhub/flows/: __init__.py  analysis.py  billing.py  calendar.py  ingest.py  reply.py  summary.py  triage.py
src/mailhub/pipelines/: __init__.py  analysis.py  billing.py  calendar.py  ingest.py  reply.py  summary.py  triage.py
src/mailhub/providers/: __init__.py  caldav.py  carddav.py  google_gmail.py  imap_smtp.py  ms_graph.py
src/mailhub/shared/: mime.py  time.py
src/mailhub/utils/: html.py  pdf.py
template/: settings.template.json  standalone.models.template.json
